# scrapie-rs

./: .gitignore  Cargo.toml
config/: config.yml
config/categories/: food.yml
src/: lib.rs  main.rs
src/app/: app.rs  mod.rs
src/cfg/: app_cfg.rs  mod.rs
src/pages/: categories.rs  mod.rs  namespace.rs  pages.rs
src/scraper/: mod.rs  resolver.rs
