[package]
name = "scrapie-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "3.2.17", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"


# Logging
tracing = "0.1"
tracing-subscriber = "0.3"


# API
actix-web = "4"
anyhow = "1.0.61"
thiserror = "1.0.32"
